# fast-api-mongo-template

./: Dockerfile  LICENSE  README.md  dev.ps1  fly.toml  pyproject.toml
.github/workflows/: deploy.yml  main.yml
app/: main.py
app/auth/: crypto.py  dependencies.py  models.py  router.py  services.py
app/db/: client.py  model.py
app/tests/: test_app.py
